# DPITunnel-android

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/schemas/com.nomoresat.dpitunnelcli.database.AppDatabase/: 1.json  2.json
app/src/androidTest/java/com/nomoresat/dpitunnelcli/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/dpitunnel-cli-android-includes/: ifaddrs.h
app/src/main/java/com/nomoresat/dpitunnelcli/cli/: CliDaemon.kt
app/src/main/java/com/nomoresat/dpitunnelcli/database/: AppDatabase.kt  Converters.kt  Profile.kt  ProfileDao.kt
app/src/main/java/com/nomoresat/dpitunnelcli/utils/: Constants.kt  (+4 more)
app/src/main/res/drawable/: ic_bookmark_added_24dp.xml  ic_cancel_white_96dp.xml  ic_check_all_24dp.xml  ic_check_circle_white_96dp.xml  ic_dashboard_24dp.xml  ic_launcher_background.xml  ic_launcher_background_round.xml  ic_launcher_foreground.xml  ic_launcher_foreground_monochrome.xml  ic_more_vert_24dp.xml  ic_notifications_24dp.xml  ic_outline_dashboard_24dp.xml  ic_outline_profiles_24dp.xml  ic_profiles_24dp.xml  ic_quick_tile.xml  ic_restart_24dp.xml  ic_save_24.xml  ic_selector_dashboard_24dp.xml  ic_selector_profiles_24dp.xml
app/src/main/res/layout/: activity_custom_ips.xml  activity_edit_profile.xml  activity_main.xml  activity_proxified_apps.xml  activity_settings.xml  fragment_dashboard.xml  fragment_profiles.xml  view_holder_custom_ip_item.xml  view_holder_profile_item.xml  view_holder_proxified_apps_item.xml
app/src/main/res/menu/: bottom_nav_menu.xml  custom_ips_toolbar_menu.xml  edit_profile_toolbar_menu.xml  profile_item_menu.xml  proxified_apps_toolbar_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  themes.xml  themes_button.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-ru-rRU/: strings.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/nomoresat/dpitunnelcli/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
metadata/en-US/: description.txt  summary.txt
metadata/ru/: description.txt  name.txt  summary.txt
(+62 files in other folders)
